--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
@@ -40,6 +41,7 @@
 	"type": "module",
 	"dependencies": {
 		"@ory/cli": "^1.0.0-alpha.1",
-		"@ory/client": "^1.14.3"
+		"@ory/client": "^1.14.3",
+		"dotenv": "^16.4.5"
 	}
 }
