feat: Fixed redirection to generate new flow token

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: identity-ui
           imagePullPolicy: IfNotPresent
-          image: containers.osystems.africa/swiftcloud/auth-ui:v0.0.1
+          image: containers.osystems.africa/swiftcloud/auth-ui:v0.0.2-dev
           volumeMounts:
             - mountPath: "/app/.env"
               subPath: .env
@@ -34,4 +34,4 @@ spec:
       volumes:
         - name: identity-ui-volume
           configMap:
-            name: identity-ui-config
+            name: env
